src/test/ui/derives/derives-span-Eq-enum-struct-variant.stderr
error[E0277]: the trait bound `Error: std::cmp::Eq` is not satisfied
  --> $DIR/derives-span-Eq-enum-struct-variant.rs:13:6
   |
LL |      x: Error
   |      ^^^^^^^^ the trait `std::cmp::Eq` is not implemented for `Error`
   |
   = note: required by `std::cmp::AssertParamIsEq`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
